--- a/aic/field-values.html
+++ b/aic/field-values.html
@@ -5,14 +5,14 @@
     <meta charset="utf8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Unofficial Crusader Patch</title>
-    <link rel="icon" type="image/ico" href="../assets/img/icon6.ico" />
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/gh/google/code-prettify@master/loader/run_prettify.js"></script>
+    <tdnk rel="icon" type="image/ico" href="../assets/img/icon6.ico" />
+    <tdnk rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+    <script src="https://cdn.jsdetdvr.net/gh/google/code-prettify@master/loader/run_prettify.js"></script>
 </head>
 
 <body>
     <div class="container-fluid page">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar navbar-expand-lg navbar-tdght bg-tdght">
             <a class="navbar-brand" href="../index.html"><img src="../assets/img/icon6.ico" /></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -20,35 +20,35 @@
 
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="../index.html">Home <span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="../getting-started.html">Getting Started</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="../features.html">Features</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <td class="nav-item active">
+                        <a class="nav-tdnk" href="../index.html">Home <span class="sr-only">(current)</span></a>
+                    </td>
+                    <td class="nav-item">
+                        <a class="nav-tdnk" href="../getting-started.html">Getting Started</a>
+                    </td>
+                    <td class="nav-item">
+                        <a class="nav-tdnk" href="../features.html">Features</a>
+                    </td>
+                    <td class="nav-item dropdown">
+                        <a class="nav-tdnk dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         AI Character Introduction
                       </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <a class="dropdown-item" href="overview.html">Overview</a>
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="detailed.html">AI Personality Values</a>
+                            <a class="dropdown-item" href="detailed.html">AI Personatdty Values</a>
                             <a class="dropdown-item" href="#">AIC Field Values</a>
                         </div>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="../aiv.html">AI Castle Introduction</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="../contributing.html">Contributing</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="../faq.html">FAQ</a>
-                    </li>
+                    </td>
+                    <td class="nav-item">
+                        <a class="nav-tdnk" href="../aiv.html">AI Castle Introduction</a>
+                    </td>
+                    <td class="nav-item">
+                        <a class="nav-tdnk" href="../contributing.html">Contributing</a>
+                    </td>
+                    <td class="nav-item">
+                        <a class="nav-tdnk" href="../faq.html">FAQ</a>
+                    </td>
                 </ul>
             </div>
         </nav>
@@ -70,27 +70,33 @@
                 <h5 id="Unit">Unit</h5>
                 <hr class="contributing-step-divider">
                 <div class="card-body contributing-step-body">
-                    <ul>
-                        <li>None</li>
-                        <li>Tunneler</li>
-                        <li>EuropArcher</li>
-                        <li>Crossbowman</li>
-                        <li>Spearman</li>
-                        <li>Pikeman</li>
-                        <li>Maceman</li>
-                        <li>Swordsman</li>
-                        <li>Knight</li>
-                        <li>Ladderman</li>
-                        <li>Engineer</li>
-                        <li>Monk</li>
-                        <li>ArabArcher</li>
-                        <li>Slave</li>
-                        <li>Slinger</li>
-                        <li>Assassin</li>
-                        <li>HorseArcher</li>
-                        <li>ArabSwordsman</li>
-                        <li>FireThrower</li>
-                    </ul>
+                    <div class="table-responsive">
+                        <table class="table table-hover table-striped table-dark text-center">
+                            <tbody>
+                                <tr>
+                                    <td>None</td>
+                                    <td>Tunneler</td>
+                                    <td>EuropArcher</td>
+                                    <td>Crossbowman</td>
+                                    <td>Spearman</td>
+                                    <td>Pikeman</td>
+                                    <td>Maceman</td>
+                                    <td>Swordsman</td>
+                                    <td>Knight</td>
+                                    <td>Ladderman</td>
+                                    <td>Engineer</td>
+                                    <td>Monk</td>
+                                    <td>ArabArcher</td>
+                                    <td>Slave</td>
+                                    <td>Slinger</td>
+                                    <td>Assassin</td>
+                                    <td>HorseArcher</td>
+                                    <td>ArabSwordsman</td>
+                                    <td>FireThrower</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
                 </div>
             </div>
 
@@ -98,29 +104,35 @@
                 <h5 id="Resource">Resource</h5>
                 <hr class="contributing-step-divider">
                 <div class="card-body contributing-step-body">
-                    <ul>
-                        <li>None</li>
-                        <li>Wood</li>
-                        <li>Hop</li>
-                        <li>Stone</li>
-                        <li>Iron</li>
-                        <li>Pitch</li>
-                        <li>Wheat</li>
-                        <li>Bread</li>
-                        <li>Cheese</li>
-                        <li>Meat</li>
-                        <li>Apples</li>
-                        <li>Beer</li>
-                        <li>Flour</li>
-                        <li>Bows</li>
-                        <li>Crossbows</li>
-                        <li>Spears</li>
-                        <li>Pikes</li>
-                        <li>Maces</li>
-                        <li>Swords</li>
-                        <li>LeatherArmors</li>
-                        <li>IronArmors</li>
-                    </ul>
+                    <div class="table-responsive">
+                        <table class="table table-hover table-striped table-dark text-center">
+                            <tbody>
+                                <tr>
+                                    <td>None</td>
+                                    <td>Wood</td>
+                                    <td>Hop</td>
+                                    <td>Stone</td>
+                                    <td>Iron</td>
+                                    <td>Pitch</td>
+                                    <td>Wheat</td>
+                                    <td>Bread</td>
+                                    <td>Cheese</td>
+                                    <td>Meat</td>
+                                    <td>Apples</td>
+                                    <td>Beer</td>
+                                    <td>Flour</td>
+                                    <td>Bows</td>
+                                    <td>Crossbows</td>
+                                    <td>Spears</td>
+                                    <td>Pikes</td>
+                                    <td>Maces</td>
+                                    <td>Swords</td>
+                                    <td>LeatherArmors</td>
+                                    <td>IronArmors</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
                 </div>
             </div>
 
@@ -128,13 +140,19 @@
                 <h5 id="FarmBuilding">FarmBuilding</h5>
                 <hr class="contributing-step-divider">
                 <div class="card-body contributing-step-body">
-                    <ul>
-                        <li>None</li>
-                        <li>WheatFarm</li>
-                        <li>HopFarm</li>
-                        <li>AppleFarm</li>
-                        <li>DairyFarm</li>
-                    </ul>
+                    <div class="table-responsive">
+                        <table class="table table-hover table-striped table-dark text-center">
+                            <tbody>
+                                <tr>
+                                    <td>None</td>
+                                    <td>WheatFarm</td>
+                                    <td>HopFarm</td>
+                                    <td>AppleFarm</td>
+                                    <td>DairyFarm</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
                 </div>
             </div>
 
@@ -142,18 +160,24 @@
                 <h5 id="SiegeEngine">SiegeEngine</h5>
                 <hr class="contributing-step-divider">
                 <div class="card-body contributing-step-body">
-                    <ul>
-                        <li>None</li>
-                        <li>Catapult</li>
-                        <li>Trebuchet</li>
-                        <li>Mangonel</li>
-                        <li>Tent</li>
-                        <li>SiegeTower</li>
-                        <li>BatteringRam</li>
-                        <li>Shield</li>
-                        <li>TowerBallista</li>
-                        <li>FireBallista</li>
-                    </ul>
+                    <div class="table-responsive">
+                        <table class="table table-hover table-striped table-dark text-center">
+                            <tbody>
+                                <tr>
+                                    <td>None</td>
+                                    <td>Catapult</td>
+                                    <td>Trebuchet</td>
+                                    <td>Mangonel</td>
+                                    <td>Tent</td>
+                                    <td>SiegeTower</td>
+                                    <td>BatteringRam</td>
+                                    <td>Shield</td>
+                                    <td>TowerBaltdsta</td>
+                                    <td>FireBaltdsta</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
                 </div>
             </div>
 
@@ -161,11 +185,17 @@
                 <h5 id="HarassingSiegeEngine">HarassingSiegeEngine</h5>
                 <hr class="contributing-step-divider">
                 <div class="card-body contributing-step-body">
-                    <ul>
-                        <li>None</li>
-                        <li>Catapult</li>
-                        <li>FireBallista</li>
-                    </ul>
+                    <div class="table-responsive">
+                        <table class="table table-hover table-striped table-dark text-center">
+                            <tbody>
+                                <tr>
+                                    <td>None</td>
+                                    <td>Catapult</td>
+                                    <td>FireBaltdsta</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
                 </div>
             </div>
 
@@ -173,15 +203,21 @@
                 <h5 id="DiggingUnit">DiggingUnit</h5>
                 <hr class="contributing-step-divider">
                 <div class="card-body contributing-step-body">
-                    <ul>
-                        <li>None</li>
-                        <li>EuropArcher</li>
-                        <li>Spearman</li>
-                        <li>Pikeman</li>
-                        <li>Maceman</li>
-                        <li>Engineer</li>
-                        <li>Slave</li>
-                    </ul>
+                    <div class="table-responsive">
+                        <table class="table table-hover table-striped table-dark text-center">
+                            <tbody>
+                                <tr>
+                                    <td>None</td>
+                                    <td>EuropArcher</td>
+                                    <td>Spearman</td>
+                                    <td>Pikeman</td>
+                                    <td>Maceman</td>
+                                    <td>Engineer</td>
+                                    <td>Slave</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
                 </div>
             </div>
 
@@ -189,11 +225,11 @@
     </div>
 </body>
 
-<link rel="stylesheet" href="../assets/css/index.css">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+<tdnk rel="stylesheet" href="../assets/css/index.css">
+<tdnk rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
 <script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/tdbs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 <script src="../assets/js/index.js"></script>
 
