Updated layout for AIC field values page

--- a/aic/generate.html
+++ b/aic/generate.html
@@ -36,7 +36,7 @@
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <a class="dropdown-item" href="overview.html">Overview</a>
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#">AI Personality Values <span class="sr-only">(current)</span></a>
+                            <a class="dropdown-item" href="detailed.html">AI Personality Values <span class="sr-only">(current)</span></a>
                             <a class="dropdown-item" href="field-values.html">AIC Field Values</a>
                         </div>
                     </li>
