--- a/aic/field-values.html
+++ b/aic/field-values.html
@@ -61,130 +61,225 @@
         </div>
         <hr class="header-divider">
         <div id="feature-header">
-            <h4 class="text-center">Stronghold Crusader: AI Character Behaviour</h4>
+            <h4 class="text-center">AI Character Definition Field Values</h4>
         </div>
 
         <div id="feature-content">
 
-            <div class="card contributing-step">
-                <h5 id="Unit">Unit</h5>
-                <hr class="contributing-step-divider">
-                <div class="card-body contributing-step-body">
-                    <ul>
-                        <li>None</li>
-                        <li>Tunneler</li>
-                        <li>EuropArcher</li>
-                        <li>Crossbowman</li>
-                        <li>Spearman</li>
-                        <li>Pikeman</li>
-                        <li>Maceman</li>
-                        <li>Swordsman</li>
-                        <li>Knight</li>
-                        <li>Ladderman</li>
-                        <li>Engineer</li>
-                        <li>Monk</li>
-                        <li>ArabArcher</li>
-                        <li>Slave</li>
-                        <li>Slinger</li>
-                        <li>Assassin</li>
-                        <li>HorseArcher</li>
-                        <li>ArabSwordsman</li>
-                        <li>FireThrower</li>
-                    </ul>
+        <div class="row">
+            <div class="col-lg-6">
+                <div class="card aic-field">
+                    <div class="card-header">
+                        <h5 class="mb-0">
+                        <button class="btn btn-link">
+                            Unit
+                        </button>
+                        </h5>
+                    </div>
+                    <div class="card-body aic-field-body">
+                        <div class="table-responsive">
+                            <table class="table table-hover table-striped table-dark text-center">
+                                <tbody>
+                                    <tr>
+                                        <td>None</td>
+                                        <td>Tunneler</td>
+                                        <td>EuropArcher</td>
+                                        <td>Crossbowman</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Spearman</td>
+                                        <td>Pikeman</td>
+                                        <td>Maceman</td>
+                                        <td>Swordsman</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Knight</td>
+                                        <td>Ladderman</td>
+                                        <td>Engineer</td>
+                                        <td>Monk</td>
+                                    </tr>
+                                    <tr>
+                                        <td>ArabArcher</td>
+                                        <td>Slave</td>
+                                        <td>Slinger</td>
+                                        <td>Assassin</td>
+                                    </tr>
+                                    <tr>
+                                        <td>HorseArcher</td>
+                                        <td>ArabSwordsman</td>
+                                        <td>FireThrower</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
                 </div>
+
+                <div class="card aic-field">
+                    <div class="card-header">
+                        <h5 class="mb-0">
+                        <button class="btn btn-link">
+                            Resource
+                        </button>
+                        </h5>
+                    </div>
+                    <div class="card-body aic-field-body">
+                        <div class="table-responsive">
+                            <table class="table table-hover table-striped table-dark text-center">
+                                <tbody>
+                                    <tr>
+                                        <td>None</td>
+                                        <td>Wood</td>
+                                        <td>Hop</td>
+                                        <td>Stone</td>
+                                        <td>Iron</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Pitch</td>
+                                        <td>Wheat</td>
+                                        <td>Bread</td>
+                                        <td>Cheese</td>
+                                        <td>Meat</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Apples</td>
+                                        <td>Beer</td>
+                                        <td>Flour</td>
+                                        <td>Bows</td>
+                                        <td>Crossbows</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Spears</td>
+                                        <td>Pikes</td>
+                                        <td>Maces</td>
+                                        <td>Swords</td>
+                                        <td>LeatherArmors</td>
+                                    </tr>
+                                    <tr>
+                                        <td>IronArmors</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+
             </div>
 
-            <div class="card contributing-step">
-                <h5 id="Resource">Resource</h5>
-                <hr class="contributing-step-divider">
-                <div class="card-body contributing-step-body">
-                    <ul>
-                        <li>None</li>
-                        <li>Wood</li>
-                        <li>Hop</li>
-                        <li>Stone</li>
-                        <li>Iron</li>
-                        <li>Pitch</li>
-                        <li>Wheat</li>
-                        <li>Bread</li>
-                        <li>Cheese</li>
-                        <li>Meat</li>
-                        <li>Apples</li>
-                        <li>Beer</li>
-                        <li>Flour</li>
-                        <li>Bows</li>
-                        <li>Crossbows</li>
-                        <li>Spears</li>
-                        <li>Pikes</li>
-                        <li>Maces</li>
-                        <li>Swords</li>
-                        <li>LeatherArmors</li>
-                        <li>IronArmors</li>
-                    </ul>
-                </div>
-            </div>
+            <div class="col-lg-6">
 
-            <div class="card contributing-step">
-                <h5 id="FarmBuilding">FarmBuilding</h5>
-                <hr class="contributing-step-divider">
-                <div class="card-body contributing-step-body">
-                    <ul>
-                        <li>None</li>
-                        <li>WheatFarm</li>
-                        <li>HopFarm</li>
-                        <li>AppleFarm</li>
-                        <li>DairyFarm</li>
-                    </ul>
+                <div class="card aic-field">
+                    <div class="card-header">
+                        <h5 class="mb-0">
+                        <button class="btn btn-link">
+                            SiegeEngine
+                        </button>
+                        </h5>
+                    </div>
+                    <div class="card-body aic-field-body">
+                        <div class="table-responsive">
+                            <table class="table table-hover table-striped table-dark text-center">
+                                <tbody>
+                                    <tr>
+                                        <td>None</td>
+                                        <td>Catapult</td>
+                                        <td>Trebuchet</td>
+                                        <td>Mangonel</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Tent</td>
+                                        <td>SiegeTower</td>
+                                        <td>BatteringRam</td>
+                                        <td>Shield</td>
+                                    </tr>
+                                    <tr>
+                                        <td>TowerBallista</td>
+                                        <td>FireBallista</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
                 </div>
-            </div>
 
-            <div class="card contributing-step">
-                <h5 id="SiegeEngine">SiegeEngine</h5>
-                <hr class="contributing-step-divider">
-                <div class="card-body contributing-step-body">
-                    <ul>
-                        <li>None</li>
-                        <li>Catapult</li>
-                        <li>Trebuchet</li>
-                        <li>Mangonel</li>
-                        <li>Tent</li>
-                        <li>SiegeTower</li>
-                        <li>BatteringRam</li>
-                        <li>Shield</li>
-                        <li>TowerBallista</li>
-                        <li>FireBallista</li>
-                    </ul>
+                <div class="card aic-field">
+                    <div class="card-header">
+                        <h5 class="mb-0">
+                        <button class="btn btn-link">
+                            HarassingSiegeEngine
+                        </button>
+                        </h5>
+                    </div>
+                    <div class="card-body aic-field-body">
+                        <div class="table-responsive">
+                            <table class="table table-hover table-striped table-dark text-center">
+                                <tbody>
+                                    <tr>
+                                        <td>None</td>
+                                        <td>Catapult</td>
+                                        <td>FireBallista</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
                 </div>
-            </div>
 
-            <div class="card contributing-step">
-                <h5 id="HarassingSiegeEngine">HarassingSiegeEngine</h5>
-                <hr class="contributing-step-divider">
-                <div class="card-body contributing-step-body">
-                    <ul>
-                        <li>None</li>
-                        <li>Catapult</li>
-                        <li>FireBallista</li>
-                    </ul>
+                <div class="card aic-field">
+                    <div class="card-header">
+                        <h5 class="mb-0">
+                        <button class="btn btn-link">
+                            DiggingUnit
+                        </button>
+                        </h5>
+                    </div>
+                    <div class="card-body aic-field-body">
+                        <div class="table-responsive">
+                            <table class="table table-hover table-striped table-dark text-center">
+                                <tbody>
+                                    <tr>
+                                        <td>None</td>
+                                        <td>EuropArcher</td>
+                                        <td>Spearman</td>
+                                        <td>Pikeman</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Maceman</td>
+                                        <td>Engineer</td>
+                                        <td>Slave</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
                 </div>
-            </div>
 
-            <div class="card contributing-step">
-                <h5 id="DiggingUnit">DiggingUnit</h5>
-                <hr class="contributing-step-divider">
-                <div class="card-body contributing-step-body">
-                    <ul>
-                        <li>None</li>
-                        <li>EuropArcher</li>
-                        <li>Spearman</li>
-                        <li>Pikeman</li>
-                        <li>Maceman</li>
-                        <li>Engineer</li>
-                        <li>Slave</li>
-                    </ul>
+                <div class="card aic-field">
+                    <div class="card-header">
+                        <h5 class="mb-0">
+                        <button class="btn btn-link">
+                            FarmBuilding
+                        </button>
+                        </h5>
+                    </div>
+                    <div class="card-body aic-field-body">
+                        <div class="table-responsive">
+                            <table class="table table-hover table-striped table-dark text-center">
+                                <tbody>
+                                    <tr>
+                                        <td>None</td>
+                                        <td>WheatFarm</td>
+                                        <td>HopFarm</td>
+                                        <td>AppleFarm</td>
+                                        <td>DairyFarm</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
                 </div>
-            </div>
 
+            </div>
         </div>
     </div>
 </body>
