--- a/faq.html
+++ b/faq.html
@@ -52,10 +52,10 @@
             </div>
         </nav>
         <div class="header">
-            <h4 class="text-center">Unofficial Crusader Patch Latest Version: UCP 2.13 
+            <h4 class="text-center">Unofficial Crusader Patch Latest Version: UCP 2.14 
                     <a href="https://github.com/Sh0wdown/UnofficialCrusaderPatch"><i class="fab fa-github"></i></a>
-                    <a class="latest-release" href="https://github.com/Sh0wdown/UnofficialCrusaderPatch/releases/tag/v2.13">changelog</a> 
-                    <a class="latest-release" href="https://github.com/Sh0wdown/UnofficialCrusaderPatch/releases/download/v2.13/UnofficialCrusaderPatch_v2.13.exe">download</a>
+                    <a class="latest-release" href="https://github.com/Sh0wdown/UnofficialCrusaderPatch/releases/tag/v2.14">changelog</a> 
+                    <a class="latest-release" href="https://github.com/Sh0wdown/UnofficialCrusaderPatch/releases/download/v2.14/UnofficialCrusaderPatch_v2.14.zip">download</a>
                 </h4>
         </div>
         <hr class="header-divider">
