--- a/getting-started.html
+++ b/getting-started.html
@@ -52,10 +52,10 @@
             </div>
         </nav>
         <div class="header">
-          <h4 class="text-center">Unofficial Crusader Patch Latest Version: UCP 2.13 
+          <h4 class="text-center">Unofficial Crusader Patch Latest Version: UCP 2.14 
                   <a href="https://github.com/Sh0wdown/UnofficialCrusaderPatch"><i class="fab fa-github"></i></a>
-                  <a class="latest-release" href="https://github.com/Sh0wdown/UnofficialCrusaderPatch/releases/tag/v2.13">changelog</a> 
-                  <a class="latest-release" href="https://github.com/Sh0wdown/UnofficialCrusaderPatch/releases/download/v2.13/UnofficialCrusaderPatch_v2.13.exe">download</a>
+                  <a class="latest-release" href="https://github.com/Sh0wdown/UnofficialCrusaderPatch/releases/tag/v2.14">changelog</a> 
+                  <a class="latest-release" href="https://github.com/Sh0wdown/UnofficialCrusaderPatch/releases/download/v2.14/UnofficialCrusaderPatch_v2.14.zip">download</a>
               </h4>
       </div>
         <hr class="header-divider">
@@ -74,7 +74,7 @@
 
                         <div id="collapseOne" class="collapse" aria-labelledby="instruction-one" data-parent="#accordion-instructions">
                             <div class="card-body install-step">
-                                <a href="https://github.com/Sh0wdown/UnofficialCrusaderPatch/releases/download/v2.13/UnofficialCrusaderPatch_v2.13.exe">Latest Stable Release</a>
+                                <a href="https://github.com/Sh0wdown/UnofficialCrusaderPatch/releases/download/v2.14/UnofficialCrusaderPatch_v2.14.zip">Latest Stable Release</a>
                                 <br>
                                 <a href="https://github.com/Sh0wdown/UnofficialCrusaderPatch/tree/master"> View source on GitHub <i class="fab fa-github"></i></a>
                             </div>
