Updated website for v2.14 release (#586)
* Add filter to features, next steps for aic generation

* Add filter to features and next steps for aic generation

* Fix css/js location for aiv page

* Made aic descriptions table responsive (scrolls on smaller screens)

* Add styling to AIC field values page

* Updated layout for AIC field values page

* Updated aic parameter table layout

* Preparing for release, or not

* Preparing for a new release, or not

* Release v2.14

--- a/index.html
+++ b/index.html
@@ -53,10 +53,11 @@
         </nav>
         <div class="header">
             <h2 class="text-center">Welcome to the Unofficial Crusader Patch</h2>
-            <h4 class="text-center">Latest Version: UCP 2.13 
+            <h4 class="text-center">Latest Version: UCP 2.14 
                     <a href="https://github.com/Sh0wdown/UnofficialCrusaderPatch"><i class="fab fa-github"></i></a>
-                    <a class="latest-release" href="https://github.com/Sh0wdown/UnofficialCrusaderPatch/releases/tag/v2.13">changelog</a> 
-                    <a class="latest-release" href="https://github.com/Sh0wdown/UnofficialCrusaderPatch/releases/download/v2.13/UnofficialCrusaderPatch_v2.13.exe">download</a>
+                    <a class="latest-release" href="https://github.com/Sh0wdown/UnofficialCrusaderPatch/releases/tag/v2.14">changelog</a> 
+                    <a class="latest-release" href="https://github.com/Sh0wdown/UnofficialCrusaderPatch/releases/download/v2.14/UnofficialCrusaderPatch_v2.14.zip">download</a>
+                    <a href="https://discord.gg/vmy7CBR"><img src="https://discordapp.com/api/guilds/426318193603117057/widget.png?style=shield"></a>
                 </h4>
         </div>
         <hr class="header-divider">
@@ -111,7 +112,7 @@
                         <div class="card-header" id="feature-four" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
                             <h5 class="mb-0">
                                 <button class="btn btn-link collapsed">
-                                  <i class="fas fa-star"></i>  Quicker gate responsiveness
+                                    <i class="fas fa-tachometer-alt"></i>  Quicker gate responsiveness
                                 </button>
                               </h5>
                         </div>
@@ -124,11 +125,101 @@
                     <div class="card feature">
                         <div class="card-header" id="feature-list-link">
                             <h5 class="mb-0">
-                                  <a id="features-link" class="btn btn-link collapsed" href="features.html"><i class="fas fa-star"></i>  View full descriptions of all features</a>
+                                  <a id="features-link" class="btn btn-link collapsed" href="features.html"><i class="fas fa-list-ul"></i>  View full descriptions of all features</a>
                               </h5>
                         </div>
                     </div>
                 </div>
+
+                <div id="changelog">
+                    <div class="col-lg-11">
+                        <h3>Changelog</h3>
+                        <div class="card-body">
+                            We've made changes and improvements to how some parts of the patcher work internally to make the process <b>more convenient and reliable</b> for you.
+                            We hope this will make it a more enjoyable experience.
+                            Feel free to contribute or suggest ideas on <a href="https://github.com/Sh0wdown/UnofficialCrusaderPatch"></i>GitHub</a> or join the <a href="https://discord.gg/vmy7CBR">official UCP discord server</a>
+                        </div>
+                    </div>
+
+                    <div id="change-accordion">
+                        <div class="card feature">
+                            <div class="card-header" id="change-three" data-toggle="collapse" data-target="#changeThree" aria-expanded="true" aria-controls="changeThree">
+                                <h5 class="mb-0">
+                                <button class="btn btn-link"><i class="fas fa-star"></i>
+                                    New Features and Improvements
+                                </button>
+                                </h5>
+                            </div>
+
+                            <div id="changeThree" class="collapse" aria-labelledby="change-three" data-parent="#change-accordion">
+                                <div class="card-body feature-highlight">
+                                    <ul>
+                                        <li>In the new <b>StartTroops</b> tab, you will be able to select a starting unit configuration for all AI Lords as well as your Crusader or European Lord</li>
+                                        <li>In the new <b>StartGoods</b> tab, you will be able to select a starting resource configuration that will apply for yourself and all other human or AI players.</li>
+                                        <li>You are able to now load AIV sets into the patcher by creating a subfolder with the name of your AIV set inside the <code>resources\aiv</code> folder</li>
+                                        <li>If you select multiple AICs that have the same characters defined, the one you select first will be given priority and the other ones will show a warning indicating which AI Character definitions will not be used</li>
+                                        <li>The format of AIC files has changed - the patcher is now using a JSON format with <code>.json</code> file extension</li>
+                                    </ul>
+                                    <a href="assets/doc/changelog.html" target="_blank">View full changelog here</a>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="card feature">
+                            <div class="card-header" id="change-one" data-toggle="collapse" data-target="#changeOne" aria-expanded="true" aria-controls="changeOne">
+                                <h5 class="mb-0">
+                                <button class="btn btn-link"><i class="fas fa-random"></i>
+                                    Changes to the Patcher
+                                </button>
+                                </h5>
+                            </div>
+
+                            <div id="changeOne" class="collapse" aria-labelledby="change-one" data-parent="#change-accordion">
+                                <div class="card-body feature-highlight">
+                                    <ul>
+                                        <li>AIC files no longer go into an <code>aic</code> subfolder inside your Stronghold Crusader installation directory</li>
+                                        <li>In this version, the Unofficial Crusader Patch comes with a new folder structure. 
+                                            All content files (including AIC and AIV files) that are to be used/installed by the patcher go into a <code>resources\&lt;config type&gt;</code> subfolder inside the patcher directory. For example your AIC files will go into the <code>resources\aic</code> folder</li>
+                                        <li>AIC files are now in JSON format and with <code>.json</code> file extension. Old AIC files can be converted by the patcher</li>
+                                        <li>AIC and AIV sets bundled with the UCP have been updated to the newest versions</li>
+                                        <li>It is now again possible to select multiple AICs for installation at once</li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+
+
+                        <div class="card feature">
+                            <div class="card-header" id="change-two" data-toggle="collapse" data-target="#changeTwo" aria-expanded="true" aria-controls="changeTwo">
+                                <h5 class="mb-0">
+                                <button class="btn btn-link"><i class="fas fa-users"></i>
+                                    Using the Patcher
+                                </button>
+                                </h5>
+                            </div>
+
+                            <div id="changeTwo" class="collapse" aria-labelledby="change-two" data-parent="#change-accordion">
+                                <div class="card-body feature-highlight">
+                                    <h4>Language support</h4>
+                                    <ul>
+                                        <li>An issue where sharing <code>ucp.cfg</code> (config) files between persons with different locales would cause crashes or otherwise not work properly has been resolved. 
+                                            Please note that any decimal values in the ucp.cfg must now use a dot (.) as the decimal separator to be interpreted correctly</li>
+                                        <li>Translations for Chinese and Hungarian have been added</li>
+                                    </ul>
+                
+                                    <h4>Installation</h4>
+                                    <ul>
+                                        <li>There is now a <b>command line tool</b> that can be used for quicker or custom installation 
+                                            (see <a href="(https://sh0wdown.github.io/UnofficialCrusaderPatch/getting-started.html">installation steps</a> for details)</li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+
+
             </div>
             <div class="col-lg-6">
                 <h3>About the Unofficial Crusader Patch (UCP)</h3>
